--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 <!-- Write your HTML in this file -->
 
+<!DOCTYPE html> 
+<html lang="en">
+    <head>
+<title>This is Title</title>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<!--This is a comment -->
+<body>This is a body</body>
+
+</html>
