--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+       <title>
+           my page
+       </title> 
+       <link rel="stylesheet" href="#">
+    </head>
 
+    <body>
+
+    </body>
+</html>
