--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- COMMENT! -->
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Good Morning Vietnam!</title>
+    </head>
+    <body>
 
+    </body>
+</html>
