--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title> This is my lab </title>
+</head>
+<body>
+      <h1>Hi</h1>
+      <!-- This is a comment! -->
+</body>
+</html>
