--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+
+<body>
+
+</body>
+
+</html>
