--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <!-- This is a comment! -->
+        <title>me</title>
+    </head>
+    <body>
 
+
+    </body>
+</html>
