--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Cat Perry's Favorite Cats</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
+    </head>
+    <body>
+        <!-- This is a comment! -->
+    </body>
+</html>
