--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>learn.do</title>
+<link rel="stylesheet" type="txt/css" href="style.css">
+</head>
 
+<body>
+</body>
+
+</html>
