--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en"> <!-- This is a comment! -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+</body>
+</html>
